# asynclib

./: .clangd  .gitignore  meson.build  meson.native  meson.options
asynclib/: aggregateerror.cc  aggregateerror.h  asyncfunction.h  asyncfunctionawaitable.h  asyncfunctionbegin.h  asyncfunctionend.h  asyncfunctioninvocation.h  asynclib.h  asynctask.h  asynctaskawaitable.h  asynctaskcoroutine.h  asynctasktuple.h  asynctasktupleawaitable.cc  asynctasktupleawaitable.h  coroutine.h  error.cc  error.h  future.cc  future.h  future_co.h  future_op.h  futureasyncinvocation.h  futureawaitable.h  futurechain.h  futureconcepts.h  futurecoroutine.h  futurepollable.h  gliberror.cc  gliberror.h  meson.build  pollablehost.cc  pollablehost.h
asynclib-gio/: asyncfunction.h  asyncfunctionbase.h  asyncfunctionbegin.h  asyncfunctionco.h  asyncfunctioncoroutine.h  asyncfunctionend.h  asynclib-gio.h  coroutine.h  cpperror.cc  cpperror.h  gioerror.cc  gioerror.h  meson.build  task.cc  task.h  taskactivate.h  taskcomplete.h  taskfunction.h
asynclib/impl/: invoker.cc  invoker.h  meson.build
src/: main.cc  meson.build
src/asynclib/: future.cc  future.h  future_co.h  future_op.h  gioerror.cc  gioerror.h  gioexception.cc  gioexception.h  invoker.cc  invoker.h  meson.build  slice.h  task.cc  task.h  taskactivate.h  taskcomplete.h  taskfunction.h
src/asynclib/impl/: checksource.cc  checksource.h  checkthread.cc  checkthread.h  invoker.cc  meson.build
tests/: meson.build  plotter.py  testing.cc  testing.h
tests/asynclib/: future.cc  future_co.cc  future_op.cc  futurecoroutine.cc  futuretask.cc  meson.build  server.cc  server.h  server.py  stress.cc  task.cc
tests/asynclib-gio/: meson.build  server.cc  server.h  server.py  times.cc  tmpfile.cc
